[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["EmirAkagunduz16 <akagunduzemir04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^2.2.2"
pyarrow = "^16.0.0"
fastparquet = "^2024.2.0"
tqdm = "^4.66.2"
plotly = "^5.21.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
optuna = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
